--- a/RecipEase/app/src/main/res/layout/activity_about.xml
+++ b/RecipEase/app/src/main/res/layout/activity_about.xml
@@ -64,11 +64,12 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="293dp"
+        android:layout_width="369dp"
         android:layout_height="38dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:text="Meet Recipease, the app that help your find recipes with ease."
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,13 +81,13 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text='Want to get started? Select "find recipes"  from the navbar, enter a recipe name, or select some ingredients and get ready to start cooking.'
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -96,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text='Want to add your personal touch to the Recipease community? Select "create a recipe" from the navbar.'
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,11 +107,11 @@
 
     <TextView
         android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="360dp"
+        android:layout_height="19dp"
         android:layout_marginTop="8dp"
         android:text="With Recipease your creativity in the kitchen is the limit."
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +125,7 @@
         android:layout_height="33dp"
         android:layout_marginTop="8dp"
         android:text="Any comments, questions, or concerns please email contact@recipease.com!"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
