--- a/RecipEase/app/src/main/res/layout/item_recipe.xml
+++ b/RecipEase/app/src/main/res/layout/item_recipe.xml
@@ -23,8 +23,8 @@
             android:id="@+id/ivTransparency"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_alignBottom="@id/recipeImage"
-            android:background="#aa000000" />
+            android:layout_below="@id/recipeImage"
+            android:background="@color/colorAccent" />
 
         <ImageView
             android:id = "@+id/heart"
@@ -50,17 +50,19 @@
             style="@style/TextAppearance.AppCompat.Headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/recipeImage"
+            android:layout_alignBottom="@id/ivTransparency"
             android:padding="8dp"
             android:textColor="#FFFFFF"
+            android:background="@color/colorAccent"
             android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/missing_ingredients"
-            android:layout_below="@id/recipeImage"
+            android:layout_below="@id/ivTransparency"
             android:padding="8dp"
+            android:background="#FFFFFF"
             style="@style/TextAppearance.AppCompat.Subhead" />
 
     </RelativeLayout>
