--- a/RecipEase/app/src/main/res/layout/personal_recipe_list.xml
+++ b/RecipEase/app/src/main/res/layout/personal_recipe_list.xml
@@ -9,59 +9,48 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:orientation="vertical"
-        android:nestedScrollingEnabled="true">
+        android:layout_height="wrap_content"
+        android:nestedScrollingEnabled="true"
+        android:orientation="vertical">
 
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:orientation="vertical"
-            android:background="#fff"
-            android:weightSum="1"
-            android:layout_alignParentTop="true"
+            android:layout_height="155dp"
             android:layout_alignParentStart="true"
-            android:id="@+id/relativeLayout">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Edit Search"
-                android:id="@+id/editSearchTextView"
-                android:textColor="#08f"
-                android:textSize="15dp"
-                android:onClick="onEditSearch"
-                android:layout_marginBottom="15dp"
-                android:layout_marginLeft="20dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/resultText"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:textColor="@color/colorPrimary"
-                android:textSize="15dp" />
-
+            android:layout_alignParentTop="true"
+            android:background="#fff"
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <TextView
                 android:id="@+id/logoText"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center_horizontal"
                 android:text="@string/textLogo"
                 android:textColor="@color/colorAccent"
                 android:textSize="72sp"
+
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/favoritesPageResults"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor = "#aa000000"
+                android:layout_alignParentBottom= "true"
+                android:paddingBottom = "10dp"
+                android:textStyle="bold"
+                android:gravity = "center_horizontal"
+                android:textSize="20sp"/>
+
         </RelativeLayout>
+
 
     </RelativeLayout>
 
@@ -80,6 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:clickable="true"
             android:scrollbars="vertical" />
 
