--- a/RecipEase/app/src/main/res/layout/activity_trending_recipes.xml
+++ b/RecipEase/app/src/main/res/layout/activity_trending_recipes.xml
@@ -9,14 +9,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="160dp"
         android:orientation="vertical"
         android:nestedScrollingEnabled="true">
 
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="175dp"
+            android:layout_height="160dp"
             android:orientation="vertical"
             android:background="#fff"
             android:weightSum="1"
@@ -24,27 +24,6 @@
             android:layout_alignParentStart="true"
             android:id="@+id/relativeLayout">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Edit Search"
-                android:id="@+id/editSearchTextView"
-                android:textColor="#08f"
-                android:textSize="15dp"
-                android:onClick="onEditSearch"
-                android:layout_marginTop="140dp"
-                android:layout_marginLeft="20dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sort By"
-                android:id="@+id/sortByTextView"
-                android:layout_marginRight="20dp"
-                android:textSize="15dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="140dp"
-                android:textColor="#08f" />
 
             <TextView
                 android:id="@+id/logoText"
@@ -57,6 +36,18 @@
                 android:textSize="72sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/TrendingText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/logoText"
+                android:text="All Time Trending"
+                android:gravity="center_horizontal"
+                android:paddingTop="10dp"
+                android:textStyle= "bold"
+                android:textColor="#000000"
+                android:textSize="20sp" />
 
         </RelativeLayout>
 
