User can delete their recipes
If user owns recipe, recipedetailsactivity shows a delete button and asks the user if they want to delete the recipe.

--- a/RecipEase/app/src/main/res/layout/activity_recipe_details.xml
+++ b/RecipEase/app/src/main/res/layout/activity_recipe_details.xml
@@ -148,6 +148,15 @@
             android:onClick="addComment"
             app:srcCompat="@drawable/ic_add" />
 
+        <ImageView
+            android:id="@+id/btDeleteTrash"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/ivImageURL"
+            android:adjustViewBounds="true"
+            android:onClick="deleteRecipe" />
+
 
     </RelativeLayout>
 </ScrollView>
