--- a/RecipEase/app/src/main/res/layout/activity_recipe_details.xml
+++ b/RecipEase/app/src/main/res/layout/activity_recipe_details.xml
@@ -35,6 +35,8 @@
             android:layout_height="80dp"
             android:layout_below="@id/tvTitle"
             android:adjustViewBounds="false"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp"
             android:onClick="onClickFavorites"
             android:src="@drawable/new_heart" />
 
@@ -54,10 +56,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/tvTitle"
-            android:layout_marginTop="65dp"
+            android:layout_below="@+id/favoriteButton"
+            android:background="#08f"
+            android:padding="20sp"
             android:text="Ingredients"
-            android:textColor="@color/colorPrimary"
+            android:textColor="#fff"
             android:textSize="24sp"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
             tools:layout_editor_absoluteX="0dp" />
@@ -70,7 +73,9 @@
             android:layout_below="@+id/tvCookingIngredients"
             android:layout_marginTop="11dp"
             android:text="Instructions"
-            android:textColor="@color/colorPrimary"
+            android:padding="20sp"
+            android:background="#08f"
+            android:textColor="#fff"
             android:textSize="24sp"
             app:layout_constraintTop_toBottomOf="@+id/tvCookingIngredients"
             tools:layout_editor_absoluteX="0dp" />
@@ -85,6 +90,7 @@
             android:text="@string/cookingIngredients"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
+            android:padding="20sp"
             app:layout_constraintTop_toBottomOf="@+id/staticIngredients"
             tools:layout_editor_absoluteX="0dp" />
 
@@ -98,6 +104,7 @@
             android:text="@string/cookingInstructions"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
+            android:padding="20sp"
             app:layout_constraintTop_toBottomOf="@+id/staticInstructions"
             tools:layout_editor_absoluteX="0dp" />
 
@@ -107,9 +114,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvCookingInstructions"
-            android:layout_marginTop="12dp"
-            android:text="Comments"
-            android:textColor="@color/colorPrimary"
+            android:layout_marginTop="11dp"
+            android:background="#08f"
+            android:padding="20sp"
+            android:text="Recipe Feedback"
+            android:textColor="#fff"
             android:textSize="24sp"
             app:layout_constraintTop_toBottomOf="@+id/tvCookingInstructions"
             tools:layout_editor_absoluteX="0dp" />
@@ -120,6 +129,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/staticComments"
+            android:layout_marginTop="10sp"
+            android:layout_toStartOf="@+id/btAddComment"
             android:hint="Enter a comment"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
@@ -136,16 +147,19 @@
             android:text="@string/Comments"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
+            android:padding="20sp"
             app:layout_constraintTop_toBottomOf="@+id/etNewComment"
             tools:layout_editor_absoluteX="0dp" />
 
         <ImageButton
             android:id="@+id/btAddComment"
-            android:layout_width="50sp"
-            android:layout_height="50sp"
-            android:layout_above="@+id/tvComments"
+            android:layout_width="25sp"
+            android:layout_height="25sp"
             android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/etNewComment"
+            android:background="@color/colorPrimary"
             android:onClick="addComment"
+            android:tint="#08f"
             app:srcCompat="@drawable/ic_add" />
 
         <ImageView
