--- a/RecipEase/app/src/main/res/layout/activity_recipe_details.xml
+++ b/RecipEase/app/src/main/res/layout/activity_recipe_details.xml
@@ -121,7 +121,7 @@
             android:textColor="#fff"
             android:textSize="24sp"
             app:layout_constraintTop_toBottomOf="@+id/tvCookingInstructions"
-            tools:layout_editor_absoluteX="0dp" />
+            tools:layout_editor_absoluteX="0dp" />a
 
         <EditText
             android:id="@+id/etNewComment"
