Search for Recipe by name
New activity that can be accessed from drawer. On startup it loads all recipes from database, then user can search for recipes by name.

--- a/RecipEase/app/src/main/res/menu/drawer_view.xml
+++ b/RecipEase/app/src/main/res/menu/drawer_view.xml
@@ -26,6 +26,10 @@
             android:icon="@drawable/ic_001_tray"
             android:title="favorites"/>
         <item
+            android:id="@+id/search_recipe"
+            android:icon="@drawable/ic_action_action_search"
+            android:title="search for recipe" />
+        <item
             android:id="@+id/find_recipe"
             android:icon="@drawable/ic_001_tray"
             android:title="find recipes" />
