--- a/RecipEase/app/src/main/res/layout/nav_header.xml
+++ b/RecipEase/app/src/main/res/layout/nav_header.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/logoText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:text="@string/textLogo"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="36sp"
