Search by name improvements, create recipe has spinner when uploading, commenting uses displayname, fixed toast when saving profile changes, fixed instruction step 1 not having a number, fixed recipe details having black bar instead of blue (and it no longer covers the image), user-created recipes have "Created by: " shown, sourced recipes have sourceURL shown, cleaned up Profile page a lot to make it resemble Create Recipe page,

--- a/RecipEase/app/src/main/res/layout/activity_about.xml
+++ b/RecipEase/app/src/main/res/layout/activity_about.xml
@@ -34,7 +34,7 @@
         android:layout_height="72dp"
         android:layout_marginTop="24dp"
         android:padding="20sp"
-        android:text="Meet Recipease, the app that helps your find recipes with ease."
+        android:text="Meet RecipEase, the app that helps you find recipes with ease."
         android:textAlignment="viewStart"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
@@ -63,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text='Want to add your personal touch to the Recipease community? Select "create a recipe" from the navbar.'
+        android:text='Want to add your personal touch to the RecipEase community? Select "create a recipe" from the navbar.'
         android:textAlignment="viewStart"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
@@ -79,7 +79,9 @@
         android:layout_height="73dp"
         android:background="#08f"
         android:padding="20sp"
-        android:text="Any comments, questions, or concerns please email contact@recipease.com!"
+        android:text="Any comments, questions, or concerns? Please email contact@recipease.com!"
+        android:autoLink="email"
+        android:textColorLink="@color/colorWhite"
         android:textAlignment="viewStart"
         android:textColor="#fff"
         android:textStyle="bold"
