--- a/RecipEase/app/src/main/res/layout/activity_search_recipe.xml
+++ b/RecipEase/app/src/main/res/layout/activity_search_recipe.xml
@@ -62,6 +62,7 @@
         android:gravity="center">
 
         <ProgressBar
+            android:id="@+id/spinLoader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true" />
