--- a/RecipEase/app/src/main/res/layout/content_profile.xml
+++ b/RecipEase/app/src/main/res/layout/content_profile.xml
@@ -19,8 +19,8 @@
 
         <ImageView
             android:id="@+id/ivProfilePic"
-            android:layout_width="144dp"
-            android:layout_height="144dp"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="28dp"
@@ -38,8 +38,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="56dp"
             android:text="My Profile"
+            android:textSize="32dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -54,11 +55,10 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBottom_toTopOf="@+id/etBio"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivProfilePic"
+            app:layout_constraintTop_toBottomOf="@+id/textView14"
             app:layout_constraintVertical_bias="0.086" />
 
         <EditText
@@ -70,7 +70,6 @@
             android:layout_marginTop="104dp"
             android:ems="10"
             android:inputType="textMultiLine"
-            android:textColor="@color/colorPrimaryDark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivProfilePic" />
@@ -86,6 +85,18 @@
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etDisplayName" />
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="*tap photo to edit profile picture*"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivProfilePic" />
 
         <TextView
             android:id="@+id/textView10"
