--- a/RecipEase/app/src/main/res/menu/menu_browse_recipes.xml
+++ b/RecipEase/app/src/main/res/menu/menu_browse_recipes.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.recipease.recipease.BrowseRecipesActivity">
+    tools:context="com.recipease.project.BrowseRecipesActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
