Fixed comments not showing up if visiting from trending or favorites pages; trending now uses built-in firebase orderbychild feature

--- a/RecipEase/app/src/main/res/layout/content_profile.xml
+++ b/RecipEase/app/src/main/res/layout/content_profile.xml
@@ -19,16 +19,15 @@
 
         <ImageView
             android:id="@+id/ivProfilePic"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="28dp"
             android:onClick="selectProfilePicture"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8"
-            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
         <TextView
             android:id="@+id/textView8"
